# search-engine

./: .gitignore  AVLTree.h  Answers.md  CMakeLists.txt  DocParser.cpp  DocParser.h  IndexHandler.h  Query.cpp  Query.h  UITests.cpp  main.cpp  printingAVLTree.cpp  pseudocode.md  test_AVLTree.cpp  test_DocParser.cpp  test_IndexHandler.cpp  test_QueryProcessor.cpp  userinterface.h
